修改玩首页

--- a/ttsx/templates/user_center/register.html
+++ b/ttsx/templates/user_center/register.html
@@ -25,7 +25,7 @@
 				<a href="#">登录</a>
 			</div>
 			<div class="reg_form clearfix">
-				<form>
+				<form method="post" action="/user_center/register2.html">
 				<ul>
 					<li>
 						<label>用户名:</label>
