--- a/ttsx/templates/user_center/register.html
+++ b/ttsx/templates/user_center/register.html
@@ -10,6 +10,15 @@
 	<link rel="stylesheet" type="text/css" href="/static/css/main.css">
 	<script type="text/javascript" src="/static/js/jquery-1.12.4.min.js"></script>
 	<script type="text/javascript" src="/static/js/register.js"></script>
+	<script>
+		$(function () {
+			var btn = $('#register_submit')
+			btn.click(function () {
+				if($('#user_name') & )
+            })
+        })
+
+	</script>
 </head>
 <body>
 	<div class="register_con">
@@ -25,7 +34,8 @@
 				<a href="#">登录</a>
 			</div>
 			<div class="reg_form clearfix">
-				<form method="post" action="/user_center/register2.html">
+				<form method="post" action="/user_center/register2/">
+					{%csrf_token%}
 				<ul>
 					<li>
 						<label>用户名:</label>
@@ -53,7 +63,7 @@
 						<span class="error_tip2">提示信息</span>
 					</li>
 					<li class="reg_sub">
-						<input type="submit" value="注 册" name="">
+						<input id="register_submit" type="submit" value="注 册" name="">
 					</li>
 				</ul>				
 				</form>
