--- a/ttsx/templates/user_center/index.html
+++ b/ttsx/templates/user_center/index.html
@@ -333,7 +333,7 @@
 	</div>
 	<script type="text/javascript" src="/static/js/slide.js"></script>
 	<script type="text/javascript">
-		BCSlideshow('focuspic');
+		// BCSlideshow('focuspic');
 		var oFruit = document.getElementById('fruit_more');
 		var oShownum = document.getElementById('show_count');
 
