第二天结束

--- a/ttsx/templates/user_center/footer.html
+++ b/ttsx/templates/user_center/footer.html
@@ -1,5 +1,13 @@
-{% block footer_top%}
-{% endblock %}
+<! DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<head>
+	{% block head %}
+	{% endblock head %}
+</head>
+<body>
+
+{% block body %}
+{% endblock body %}
 	<div class="footer no-mp">
 		<div class="foot_link">
 			<a href="#">关于我们</a>
@@ -13,5 +21,9 @@
 		<p>CopyRight © 2016 北京天天生鲜信息技术有限公司 All Rights Reserved</p>
 		<p>电话：010-****888    京ICP备*******8号</p>
 	</div>
-{% block footer_bottom%}
-{% endblock %}
+
+{% block body2%}
+{% endblock body2%}
+
+</body>
+</html>
