--- a/ttsx/templates/user_center/login.html
+++ b/ttsx/templates/user_center/login.html
@@ -1,9 +1,6 @@
 {% extends 'user_center/footer.html' %}
 
-{% block footer_top %}
-<! DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<head>
+{% block head %}
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>天天生鲜-登录</title>
 	<link rel="stylesheet" type="text/css" href="/static/css/reset.css">
@@ -44,8 +41,9 @@
             })
         });
 	</script>
-</head>
-<body>
+{% endblock head %}
+
+{% block body %}
 	<div class="login_top clearfix">
 		<a href="index.html" class="login_logo"><img src="/static/images/logo02.png"></a>
 	</div>
@@ -77,10 +75,4 @@
 			</div>
 		</div>
 	</div>
-{% endblock footer_top %}
-
-
-{% block footer_bottom %}
-</body>
-</html>
-{% endblock footer_bottom %}
+{% endblock body %}
