--- a/ttsx/templates/user_center/register.html
+++ b/ttsx/templates/user_center/register.html
@@ -1,9 +1,7 @@
 {% extends 'user_center/footer.html' %}
 
-{% block footer_top%}
-<! DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<head>
+{% block head %}
+
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>天天生鲜-注册</title>
 	<link rel="stylesheet" type="text/css" href="/static/css/reset.css">
@@ -11,8 +9,8 @@
 	<script type="text/javascript" src="/static/js/jquery-1.12.4.min.js"></script>
 	<script type="text/javascript" src="/static/js/register.js"></script>
 
-</head>
-<body>
+{% endblock head %}
+{% block body %}
 	<div class="register_con">
 		<div class="l_con fl">
 			<a class="reg_logo"><img src="/static/images/logo02.png"></a>
@@ -64,11 +62,4 @@
 		</div>
 
 	</div>
-{% endblock footer_top %}
-
-
-
-{% block footer_bottom%}
-</body>
-</html>
-{% endblock footer_bottom %}
+{% endblock body %}
