--- a/ttsx/templates/goods/index.html
+++ b/ttsx/templates/goods/index.html
@@ -8,20 +8,56 @@
 	<script type="text/javascript" src="/static/js/jquery-1.12.4.min.js"></script>
 	<script type="text/javascript" src="/static/js/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="/static/js/slide.js"></script>
+	<script>
+		$(function () {
+		    $.get('')
+
+
+		    for(var i=0;i<6;i++) {
+                $('.goods_more:eq(' + i + ')').prop({'href': '/goods/goods_more/?tid=' + (i+1)});
+                $('.subnav li:nth-child('+ (i+1) +') a').prop({'href': '/goods/goods_more/?tid=' + (i+1)});
+            }
+
+            var username = '{{username}}';
+			if(username != ''){
+			    $('.login_btn').hide();
+			    $('.login_info').show();
+			}
+
+		    $.get('/goods/json_index/',function(data){
+		        for(var i=0;i<6;i++){
+					$.each(data['new_goods_list'][i],function (x,n) {
+						str = '<li>' +
+							'<h4><a href="/goods/detail/?gid='+ n['gid'] +'">' + n['gtitle'] + '</a></h4> ' +
+							'<a href="/goods/detail/?gid='+ n['gid'] +'"><img src="/static/' + n['gpic'] + '"></a> ' +
+							'<div class="prize">¥ ' + n['gprice'] + '</div>' +
+							'</li>';
+						$('.goods_list:eq('+ i +')').append(str);
+					});
+
+					$.each(data['popularity_goods_list'][i],function (x,n) {
+						var str = '<a href="/goods/detail/?gid='+ n['gid'] +'">'+ n['gtitle'].substring(0,6) +'</a>';
+						$('.subtitle:eq('+ i +')').append(str);
+					})
+				}
+			})
+		})
+
+	</script>
+
 {% endblock head %}
 
 {% block body_after_head %}
 
 	<div class="search_bar clearfix">
-		<a href="index.html" class="logo fl"><img src="/static/images/logo.png"></a>
+		<a href="/" class="logo fl"><img src="/static/images/logo.png"></a>
 		<div class="search_con fl">
-			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
-			<input type="button" class="input_btn fr" name="" value="搜索">
+		<form method="get" action="/search/">
+			<input type="text" class="input_text fl" name="q" placeholder="搜索商品">
+			<input type="submit" class="input_btn fr" value="搜索">
+		</form>
 		</div>
-		<div class="guest_cart fr">
-			<a href="#" class="cart_name fl">我的购物车</a>
-			<div class="goods_count fl" id="show_count">1</div>
-		</div>
+		{% include 'temp_cart.html' %}
 	</div>
 
 	<div class="navbar_con">
@@ -68,9 +104,7 @@
 			<h3 class="fl" id="model01">新鲜水果</h3>
 			<div class="subtitle fl">
 				<span>|</span>
-				<a href="#">鲜芒</a>
-				<a href="#">加州提子</a>
-				<a href="#">亚马逊牛油果</a>
+
 			</div>
 			<a href="#" class="goods_more fr" id="fruit_more">查看更多 ></a>
 		</div>
@@ -78,26 +112,15 @@
 		<div class="goods_con clearfix">
 			<div class="goods_banner fl"><img src="/static/images/banner01.jpg"></div>
 			<ul class="goods_list fl">
+
+
+
 				<li>
 					<h4><a href="#">草莓</a></h4>
 					<a href="#"><img src="/static/images/goods/goods003.jpg"></a>
 					<div class="prize">¥ 30.00</div>
 				</li>
-				<li>
-					<h4><a href="#">葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods/goods002.jpg"></a>
-					<div class="prize">¥ 5.50</div>
-				</li>
-				<li>
-					<h4><a href="#">柠檬</a></h4>
-					<a href="#"><img src="/static/images/goods/goods001.jpg"></a>
-					<div class="prize">¥ 3.90</div>
-				</li>
-				<li>
-					<h4><a href="#">奇异果</a></h4>
-					<a href="#"><img src="/static/images/goods/goods012.jpg"></a>
-					<div class="prize">¥ 25.80</div>
-				</li>
+
 			</ul>
 		</div>
 	</div>
@@ -107,8 +130,7 @@
 			<h3 class="fl" id="model02">海鲜水产</h3>
 			<div class="subtitle fl">
 				<span>|</span>
-				<a href="#">河虾</a>
-				<a href="#">扇贝</a>				
+
 			</div>
 			<a href="#" class="goods_more fr">查看更多 ></a>
 		</div>
@@ -116,26 +138,16 @@
 		<div class="goods_con clearfix">
 			<div class="goods_banner fl"><img src="/static/images/banner02.jpg"></div>
 			<ul class="goods_list fl">
+
+
+
+
 				<li>
 					<h4><a href="#">青岛野生海捕大青虾</a></h4>
 					<a href="#"><img src="/static/images/goods/goods018.jpg"></a>
 					<div class="prize">¥ 48.00</div>
 				</li>
-				<li>
-					<h4><a href="#">扇贝</a></h4>
-					<a href="#"><img src="/static/images/goods/goods019.jpg"></a>
-					<div class="prize">¥ 46.00</div>
-				</li>
-				<li>
-					<h4><a href="#">冷冻秋刀鱼</a></h4>
-					<a href="#"><img src="/static/images/goods/goods020.jpg"></a>
-					<div class="prize">¥ 19.00</div>
-				</li>
-				<li>
-					<h4><a href="#">基围虾</a></h4>
-					<a href="#"><img src="/static/images/goods/goods021.jpg"></a>
-					<div class="prize">¥ 25.00</div>
-				</li>
+
 			</ul>
 		</div>
 	</div>
@@ -145,9 +157,7 @@
 			<h3 class="fl" id="model03">猪牛羊肉</h3>
 			<div class="subtitle fl">
 				<span>|</span>
-				<a href="#">鲜芒</a>
-				<a href="#">加州提子</a>
-				<a href="#">亚马逊牛油果</a>
+
 			</div>
 			<a href="#" class="goods_more fr">查看更多 ></a>
 		</div>
@@ -155,26 +165,16 @@
 		<div class="goods_con clearfix">
 			<div class="goods_banner fl"><img src="/static/images/banner03.jpg"></div>
 			<ul class="goods_list fl">
-				<li>
-					<h4><a href="#">维多利亚葡萄维多利亚葡萄维多利亚葡萄维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
+
+
+
+
 				<li>
 					<h4><a href="#">维多利亚葡萄</a></h4>
 					<a href="#"><img src="/static/images/goods.jpg"></a>
 					<div class="prize">¥ 38.00</div>
 				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
+
 			</ul>
 		</div>
 	</div>
@@ -184,9 +184,7 @@
 			<h3 class="fl" id="model04">禽类蛋品</h3>
 			<div class="subtitle fl">
 				<span>|</span>
-				<a href="#">鲜芒</a>
-				<a href="#">加州提子</a>
-				<a href="#">亚马逊牛油果</a>
+
 			</div>
 			<a href="#" class="goods_more fr">查看更多 ></a>
 		</div>
@@ -194,21 +192,9 @@
 		<div class="goods_con clearfix">
 			<div class="goods_banner fl"><img src="/static/images/banner04.jpg"></div>
 			<ul class="goods_list fl">
-				<li>
-					<h4><a href="#">维多利亚葡萄维多利亚葡萄维多利亚葡萄维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
+
+
+
 				<li>
 					<h4><a href="#">维多利亚葡萄</a></h4>
 					<a href="#"><img src="/static/images/goods.jpg"></a>
@@ -223,9 +209,7 @@
 			<h3 class="fl" id="model05">新鲜蔬菜</h3>
 			<div class="subtitle fl">
 				<span>|</span>
-				<a href="#">鲜芒</a>
-				<a href="#">加州提子</a>
-				<a href="#">亚马逊牛油果</a>
+
 			</div>
 			<a href="#" class="goods_more fr">查看更多 ></a>
 		</div>
@@ -233,21 +217,7 @@
 		<div class="goods_con clearfix">
 			<div class="goods_banner fl"><img src="/static/images/banner05.jpg"></div>
 			<ul class="goods_list fl">
-				<li>
-					<h4><a href="#">维多利亚葡萄维多利亚葡萄维多利亚葡萄维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
+
 				<li>
 					<h4><a href="#">维多利亚葡萄</a></h4>
 					<a href="#"><img src="/static/images/goods.jpg"></a>
@@ -262,9 +232,7 @@
 			<h3 class="fl" id="model06">速冻食品</h3>
 			<div class="subtitle fl">
 				<span>|</span>
-				<a href="#">鲜芒</a>
-				<a href="#">加州提子</a>
-				<a href="#">亚马逊牛油果</a>
+
 			</div>
 			<a href="#" class="goods_more fr">查看更多 ></a>
 		</div>
@@ -272,21 +240,7 @@
 		<div class="goods_con clearfix">
 			<div class="goods_banner fl"><img src="/static/images/banner06.jpg"></div>
 			<ul class="goods_list fl">
-				<li>
-					<h4><a href="#">维多利亚葡萄维多利亚葡萄维多利亚葡萄维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
-				<li>
-					<h4><a href="#">维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
-					<div class="prize">¥ 38.00</div>
-				</li>
+
 				<li>
 					<h4><a href="#">维多利亚葡萄</a></h4>
 					<a href="#"><img src="/static/images/goods.jpg"></a>
@@ -297,22 +251,4 @@
 	</div>
 {% endblock body_after_head %}
 
-{% block body2%}
-	<script type="text/javascript" src="js/slideshow.js"></script>
-	<script type="text/javascript">
-		BCSlideshow('focuspic');
-		var oFruit = document.getElementById('fruit_more');
-		var oShownum = document.getElementById('show_count');
 
-		var hasorder = localStorage.getItem('order_finish');
-
-		if(hasorder)
-		{
-			oShownum.innerHTML = '2';
-		}
-
-		oFruit.onclick = function(){
-			window.location.href = 'list.html';
-		}
-	</script>
-{% endblock body2%}
