--- a/ttsx/templates/user_center/login.html
+++ b/ttsx/templates/user_center/login.html
@@ -8,26 +8,20 @@
 	<script type="text/javascript" src="/static/js/jquery-1.12.4.min.js"></script>
 	<script>
 		$(function () {
-		    var exit = false
+		    var exit = false;
 			var $btn = $('.input_submit');
 			var $name = $('.name_input');
 			var $pwd = $('.pass_input');
 			$btn.click(function () {
-//				$.get('/login2/', {'username':$name.val(), 'pwd':$pwd.val() }, function (data) {
-//					alert(data);
-//					if(data == 'fault username' || data == 'fault password'){
-//					    $name.next().show().html('用户名或密码错误');
-//
-//					}
-//                });
-				var exit = false
+
+				var exit = false;
 				$.ajax({
 				    type: 'GET',
-				    url: '/login2/',
+				    url: '/user_center/login2/',
 				    data:{'username':$name.val(), 'pwd':$pwd.val() },
 					async:false,
 					success:function(data){
-						console.log(data);
+
 						if(data == 'fault username' || data == 'fault password'){
 							$name.next().show().html('用户名或密码错误');
 							exit = true
@@ -45,7 +39,7 @@
 
 {% block body %}
 	<div class="login_top clearfix">
-		<a href="index.html" class="login_logo"><img src="/static/images/logo02.png"></a>
+		<a href="../goods/index.html" class="login_logo"><img src="/static/images/logo02.png"></a>
 	</div>
 
 	<div class="login_form_bg">
@@ -55,7 +49,7 @@
 			<div class="login_form fr">
 				<div class="login_title clearfix">
 					<h1>用户登录</h1>
-					<a href="#">立即注册</a>
+					<a href="/user_center/register/">立即注册</a>
 				</div>
 				<div class="form_input">
 					<form method="post" action="/user_center/">
