--- a/ttsx/templates/user_center/user_center_info.html
+++ b/ttsx/templates/user_center/user_center_info.html
@@ -13,18 +13,16 @@
 			    $('.login_btn').hide();
 			    $('.login_info').show();
 			}
+			message.alert('hello')
         });
 	</script>
 {% endblock head %}
 
 {% block body_after_head %}
 	<div class="search_bar clearfix">
-		<a href="/user_center/index/" class="logo fl"><img src="/static/images/logo.png"></a>
+		<a href="/" class="logo fl"><img src="/static/images/logo.png"></a>
 		<div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;用户中心</div>
-		<div class="search_con fr">
-			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
-			<input type="button" class="input_btn fr" name="" value="搜索">
-		</div>		
+		{% include 'temp_search.html' %}
 	</div>
 
 	<div class="main_con clearfix">
@@ -37,69 +35,33 @@
 			</ul>
 		</div>
 		<div class="right_content clearfix">
-				<div class="info_con clearfix">
-				<h3 class="common_title2">基本信息</h3>
-						<ul class="user_info_list">
-							<li><span>用户名：</span>{{username}}</li>
-							<li><span>联系方式：</span>{{tel}}</li>
-							<li><span>联系地址：</span>{{address}}</li>
-						</ul>
-				</div>
+			<div class="info_con clearfix">
+			<h3 class="common_title2">基本信息</h3>
+					<ul class="user_info_list">
+						<li><span>用户名：</span>{{username}}</li>
+						<li><span>联系方式：</span>{{tel}}</li>
+						<li><span>联系地址：</span>{{address}}</li>
+					</ul>
+			</div>
 				
-				<h3 class="common_title2">最近浏览</h3>
-				<div class="has_view_list">
-					<ul class="goods_type_list clearfix">
-				<li>
-					<a href="/user_center/detail/"><img src="/static/images/goods/goods003.jpg"></a>
-					<h4><a href="/user_center/detail/">大兴大棚草莓</a></h4>
-					<div class="operate">
-						<span class="prize">￥16.80</span>
-						<span class="unit">16.80/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
+			<h3 class="common_title2">最近浏览</h3>
+			<div class="has_view_list">
+				<ul class="goods_type_list clearfix">
 
-				<li>
-					<a href="#"><img src="/static/images/goods/goods004.jpg"></a>
-					<h4><a href="#">吐鲁番梨光杏</a></h4>
-					<div class="operate">
-						<span class="prize">￥5.50</span>
-						<span class="unit">5.50/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
+					{%for i in lately%}
+					<li>
+						<a href="/goods/detail/?gid={{i.id}}"><img src="/static/{{i.gpic.name}}"></a>
+						<h4><a href="/goods/detail/?gid={{i.id}}">{{i.gtitle}}</a></h4>
+						<div class="operate">
+							<span class="prize">￥{{i.gprice}}</span>
+							<span class="unit">{{i.gprice}}/500g</span>
+							<a href="#" class="add_goods" title="加入购物车"></a>
+						</div>
+					</li>
+					{%endfor%}
 
-				<li>
-					<a href="#"><img src="/static/images/goods/goods005.jpg"></a>
-					<h4><a href="#">黄肉桃</a></h4>
-					<div class="operate">
-						<span class="prize">￥10.00</span>
-						<span class="unit">10.00/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-
-				<li>
-					<a href="#"><img src="/static/images/goods/goods006.jpg"></a>
-					<h4><a href="#">进口西梅</a></h4>
-					<div class="operate">
-						<span class="prize">￥28.80</span>
-						<span class="unit">28.8/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-
-				<li>
-					<a href="#"><img src="/static/images/goods/goods007.jpg"></a>
-					<h4><a href="#">香梨</a></h4>
-					<div class="operate">
-						<span class="prize">￥6.45</span>
-						<span class="unit">6.45/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-			</ul>
-		</div>
+				</ul>
+			</div>
 		</div>
 	</div>
 
