--- a/ttsx/templates/user_center/user_center_site.html
+++ b/ttsx/templates/user_center/user_center_site.html
@@ -20,12 +20,9 @@
 {% block body_after_head %}
 
 	<div class="search_bar clearfix">
-		<a href="/user_center/index/" class="logo fl"><img src="/static/images/logo.png"></a>
+		<a href="/" class="logo fl"><img src="/static/images/logo.png"></a>
 		<div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;用户中心</div>
-		<div class="search_con fr">
-			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
-			<input type="button" class="input_btn fr" name="" value="搜索">
-		</div>		
+		{% include 'temp_search.html' %}
 	</div>
 
 	<div class="main_con clearfix">
