--- a/ttsx/templates/user_center/user_center_order.html
+++ b/ttsx/templates/user_center/user_center_order.html
@@ -35,9 +35,11 @@
 		</div>
 		<div class="right_content clearfix">
 				<h3 class="common_title2">全部订单</h3>
+
+				{%for i in page%}
 				<ul class="order_list_th w978 clearfix">
-					<li class="col01">2016-8-21 17:36:24</li>
-					<li class="col02">订单号：56872934</li>
+					<li class="col01">{{i.time}}</li>
+					<li class="col02">订单号：{{i.id}}</li>
 					<li class="col02 stress">未支付</li>		
 				</ul>
 
@@ -45,63 +47,31 @@
 					<tbody>
 						<tr>
 							<td width="55%">
+								{%for j in i.orderdetail_set.all%}
 								<ul class="order_goods_list clearfix">					
-									<li class="col01"><img src="/static/images/goods02.jpg"></li>
-									<li class="col02">嘎啦苹果嘎啦苹果<em>11.80元/500g</em></li>	
-									<li class="col03">1</li>
-									<li class="col04">11.80元</li>	
+									<li class="col01"><img src="/static/{{j.good.gpic.name}}"></li>
+									<li class="col02">{{j.good.gtitle|truncatechars:'10'}}<em>{{j.price}}元/{{i.good.gunit}}g</em></li>
+									<li class="col03">{{j.count}}</li>
+									<li class="col04">{{j.xiaoji}}元</li>
 								</ul>
-								<ul class="order_goods_list clearfix">					
-									<li class="col01"><img src="/static/images/goods02.jpg"></li>
-									<li class="col02">嘎啦苹果嘎啦苹果<em>11.80元/500g</em></li>	
-									<li class="col03">1</li>
-									<li class="col04">11.80元</li>	
-								</ul>
+								{%endfor%}
+
 							</td>
-							<td width="15%">33.60元</td>
+							<td width="15%">{{i.total}}元</td>
 							<td width="15%">待付款</td>
 							<td width="15%"><a href="#" class="oper_btn">去付款</a></td>
 						</tr>
 					</tbody>
 				</table>
-				
-				<ul class="order_list_th w978 clearfix">
-					<li class="col01">2016-8-21 17:36:24</li>
-					<li class="col02">订单号：56872934</li>
-					<li class="col02 stress">已支付</li>			
-				</ul>
-				<table class="order_list_table w980">
-					<tbody>
-						<tr>
-							<td width="55%">
-								<ul class="order_goods_list clearfix">					
-									<li class="col01"><img src="/static/images/goods02.jpg"></li>
-									<li class="col02">嘎啦苹果嘎啦苹果<em>11.80元/500g</em></li>	
-									<li class="col03">1</li>
-									<li class="col04">11.80元</li>	
-								</ul>
-								<ul class="order_goods_list clearfix">					
-									<li class="col01"><img src="/static/images/goods02.jpg"></li>
-									<li class="col02">嘎啦苹果嘎啦苹果<em>11.80元/500g</em></li>	
-									<li class="col03">1</li>
-									<li class="col04">11.80元</li>	
-								</ul>
-							</td>
-							<td width="15%">33.60元</td>
-							<td width="15%">已付款</td>
-							<td width="15%"><a href="#" class="oper_btn">查看物流</a></td>
-						</tr>
-					</tbody>
-				</table>
+				{%endfor%}
 
 				<div class="pagenation">
-					<a href="#"><上一页</a>
-					<a href="#" class="active">1</a>
-					<a href="#">2</a>
-					<a href="#">3</a>
-					<a href="#">4</a>
-					<a href="#">5</a>
-					<a href="#">下一页></a>
+
+
+					{%for i in page.paginator.page_range%}
+					<a href="/user_center/user_center_order/?page={{i}}" class="{%if page.number == i%}active{%endif%}">{{i}}</a>
+					{%endfor%}
+
 				</div>
 		</div>
 	</div>
